[package]
name = "nat_vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1.25.0", features = ["full", "io-util"]}
libp2p = {version = "0.50.0", features = ["full"]}
tunio = {path = "../tunio", features = ["async-tokio"]}
futures = {version = "0.3.25"}
clap = {version = "4.1.4", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
async-trait = "0.1.63"
thiserror = "1.0.38"
futures-util = "0.3.26"
pin-project = "1.0.12"
futures-io = "0"
nix={version = "0", features =["fs"]}
cfg-if = "1.0.0"



[target.'cfg(unix)'.dependencies]
async-io = "1.12.0"

[target.'cfg(windows)'.dependencies]
async-compat = "0.2.1"
